--- a/.github/workflows/google.yaml
+++ b/.github/workflows/google.yaml
@@ -84,6 +84,10 @@ jobs:
           curl -sSL https://raw.githubusercontent.com/googleapis/googleapis/master/google/api/annotations.proto > google/api/annotations.proto
           curl -sSL https://raw.githubusercontent.com/googleapis/googleapis/master/google/api/http.proto > google/api/http.proto
 
+          # Ensure directories exist
+          mkdir -p $GOPATH/pkg/mod
+          mkdir -p $GOPATH/pkg/mod/github.com/grpc-ecosystem/grpc-gateway@v2.20.0+incompatible/third_party/googleapis
+
           mkdir -p gen
           for proto in ${{ env.changed_files }}; do
             filename=$(basename "$proto" .proto)
