--- a/.github/workflows/google.yaml
+++ b/.github/workflows/google.yaml
@@ -61,15 +61,20 @@ jobs:
           echo "proto_changed=${{ env.proto_changed }}"
           echo "changed_files=${{ env.changed_files }}"
 
+      - name: Install Go
+        run: |
+          sudo rm -rf /usr/local/go
+          curl -LO https://golang.org/dl/go1.22.0.linux-amd64.tar.gz
+          sudo tar -C /usr/local -xzf go1.22.0.linux-amd64.tar.gz
+          echo "export PATH=$PATH:/usr/local/go/bin" >> $GITHUB_ENV
+          export PATH=$PATH:/usr/local/go/bin
+
       - name: Generate OpenAPI Spec
         if: env.proto_changed == 'true'
         run: |
           # Install protoc
           sudo apt-get update
           sudo apt-get install -y protobuf-compiler
-
-          # Install go
-          sudo apt-get install -y golang-go
 
           # Set GOPATH
           echo "GOPATH=$HOME/go" >> $GITHUB_ENV
