--- a/.github/workflows/google.yaml
+++ b/.github/workflows/google.yaml
@@ -25,6 +25,7 @@ env:
   GRPC_SERVER_IMAGE: grpc-server
   GRPC_GATEWAY_IMAGE: grpc-gateway
   USE_GKE_GCLOUD_AUTH_PLUGIN: True
+  FRONTEND_REPO: aggregator-web
 
 jobs:
   build-and-deploy:
@@ -156,6 +157,57 @@ jobs:
           git add ./gen/*.swagger.json
           git commit -m "Update OpenAPI json file" || echo "No changes to commit"
           git push
+
+      - name: Generate Frontend API Client
+        if: env.proto_changed == 'true'
+        run: |
+          # Clone frontend repository
+          git clone https://${{ secrets.GH_PAT }}@github.com/${{ github.repository_owner }}/${{ env.FRONTEND_REPO }}.git frontend_repo
+          cd frontend_repo
+
+          git fetch
+          git switch gcp
+          # Create a new branch
+          git switch -c update-api-client-$(date +%Y%m%d%H%M%S)
+
+          # Process each changed Swagger file
+          for swagger_file in ../gen/*.swagger.json; do
+            filename=$(basename "$swagger_file" .swagger.json)
+            
+            # Generate API client for this specific file using the config
+            npx orval --input "$swagger_file" --config ./orval.config.js
+          done
+
+          # Check if there are changes
+          if git diff --quiet; then
+            echo "No changes in API client"
+          else
+            echo "Changes detected in API client"
+            git add .
+            git commit -m "Update API client based on new OpenAPI spec"
+            git push --set-upstream origin update-api-client-$(date +%Y%m%d%H%M%S)
+            
+            # Set flag to create PR
+            echo "create_pr=true" >> $GITHUB_ENV
+          fi
+
+      - name: Create Pull Request for Frontend
+        if: env.create_pr == 'true'
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
+          PR_RESPONSE=$(curl -X POST \
+            -H "Authorization: token $GH_PAT" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository_owner }}/${{ env.FRONTEND_REPO }}/pulls \
+            -d '{
+              "title": "Update API Client",
+              "body": "swagger.jsonからのmoduleの自動生成",
+              "head": "update-api-client-'$(date +%Y%m%d%H%M%S)'",
+              "base": "gcp"
+            }')
+
+          echo "Pull Request created: $(echo $PR_RESPONSE | jq -r .html_url)"
 
       - name: Authenticate to Google Cloud
         uses: "google-github-actions/auth@v1"
