--- a/.github/workflows/google.yaml
+++ b/.github/workflows/google.yaml
@@ -16,6 +16,7 @@ on:
   push:
     branches: [gke]
   pull_request:
+    types: [closed]
     branches: [gke]
 
 env:
@@ -29,6 +30,7 @@ env:
 
 jobs:
   build-and-deploy:
+    if: github.event.pull_request.merged == true || github.event_name == 'push'
     runs-on: ubuntu-latest
     permissions:
       contents: "write"
