--- a/kubernetes-manifests.yaml
+++ b/kubernetes-manifests.yaml
@@ -24,6 +24,12 @@ spec:
                 secretKeyRef:
                   name: grpc-secrets
                   key: STATSIG_SERVER_SECRET
+            - name: DD_AGENT_HOST
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.hostIP
+            - name: DD_TRACE_AGENT_PORT
+              value: "8126"
 ---
 apiVersion: v1
 kind: Service
@@ -57,6 +63,13 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
+          env:
+            - name: DD_AGENT_HOST
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.hostIP
+            - name: DD_TRACE_AGENT_PORT
+              value: "8126"
 ---
 apiVersion: v1
 kind: Service
